changes with home page and routes

--- a/src/Components/Day16/Style.css
+++ b/src/Components/Day16/Style.css
@@ -1,4 +1,4 @@
-/* .main_day16{
+.main_day16{
     background-color: #3494e4;
     color: white;
     display: flex;
@@ -91,4 +91,4 @@
 .cup.small-cup.full{
     background-color: #6ab3f8;
     color: #fff;
-} */
+}
