--- a/src/Components/Day39/Style.css
+++ b/src/Components/Day39/Style.css
@@ -1,4 +1,4 @@
-/* .main_day39{
+.main_day39{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -67,4 +67,4 @@
     margin-top: 20px;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
-} */
+}
