--- a/src/Components/Day6/Style.css
+++ b/src/Components/Day6/Style.css
@@ -1,6 +1,6 @@
-/* 
 
-body {
+
+/* body {
   background-color: #efedd6;
   display: flex;
   flex-direction: column;
@@ -10,13 +10,22 @@ body {
   overflow-x: hidden;
   overflow-y: scroll;
   
+} */
+.super_main_day6{
+  background-color: #efedd6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  overflow-x: hidden;
+  width: 100vw;
 }
 
 .main_day6 h2{
     margin: 15px;
     font-weight: bold;
 }
-
 
 .main_day6 h3{
     font-size: 45px;
@@ -47,7 +56,7 @@ body {
     transform: translateX(0);
 }
 
- */
+
 
 
 
