--- a/src/Components/Day7/Style.css
+++ b/src/Components/Day7/Style.css
@@ -1,5 +1,6 @@
-/* body {
+.super_main_day7 {
     height: 100vh;
+    width: 100%;
     overflow: hidden;
     margin: 0;
 }
@@ -52,7 +53,7 @@
     transition: all 1000ms ease-in-out;
 }
 
-h1 {
+.main_day7 h1 {
     font-size: 4rem;
     color: #fff;
     position: absolute;
@@ -62,7 +63,7 @@ h1 {
     white-space: nowrap;
 }
 
-.btn {
+.btn_day7 {
     position: absolute;
     display: flex;
     align-items: center;
@@ -94,4 +95,4 @@ h1 {
 
 .hover-right .left {
     width: 25%;
-} */
+}
