--- a/src/Components/ChessTask/Style.css
+++ b/src/Components/ChessTask/Style.css
@@ -102,3 +102,18 @@
     font-size: 20px;
     font-weight: 500;
 }
+
+/* .smallBox{
+    background-color: #f0d9b5;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.smallBox:nth-child(even){
+    background-color: #b58863;
+    color: rgb(155, 123, 186);
+} */
