--- a/src/Components/Day20/Style.css
+++ b/src/Components/Day20/Style.css
@@ -1,4 +1,4 @@
-/* .main_day20 {
+.main_day20 {
     background-color: black;
     height: 100vh;
     width: 100%;
@@ -42,4 +42,4 @@
       transform: translate(-50%, -50%) scale(3);
       opacity: 0;
     }
-  } */
+  }
