--- a/src/Components/Day25/Style.css
+++ b/src/Components/Day25/Style.css
@@ -85,7 +85,7 @@ body {
 
 
 
-/* @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 * {
   box-sizing: border-box;
@@ -190,14 +190,14 @@ html{
   letter-spacing: 1px;
 }
 
-.content h2,
-.content h3 {
+.content_day25 h2,
+.content_day25 h3 {
   font-size: 150%;
   margin: 20px 0;
 }
 
-.content p {
+.content_day25 p {
   color: #555;
   line-height: 30px;
   letter-spacing: 1.2px;
-} */
+}
