--- a/src/Components/Day3/Day3.css
+++ b/src/Components/Day3/Day3.css
@@ -1,14 +1,13 @@
-/* *{
+*{
     box-sizing: border-box;
 }
-
-body{
+.super_main_day3{
     font-family: 'Lato', sans-serif;
     background-color: #333;
     color: #222;
-    overflow-x: hidden;
+    width: 100%;
+    overflow-x: hidden; 
 }
-
 .Main_container{
     background-color: #fafafa;
     transform-origin: top left;
@@ -18,26 +17,21 @@ body{
     padding: 50px;
     position: relative;
 }
-
 .Main_container.show-nav{
     transform: rotate(-20deg);
 }
-
 .Main_container.show-nav .triangle{
     transform: rotate(-70deg);
 }
-
 .Main_container.show-nav + nav li{
     transform: translateX(0);
     transition-delay: 0.3s;
 }
-
 .triangle-container{
     position: fixed;
     top: -100px;
     left: -100px;
 }
-
 .triangle{
     background-color: #ff7979;
     height: 200px;
@@ -46,13 +40,11 @@ body{
     position: relative;
     transition: 0.5s linear;
 }
-
 .triangle button#close{
     top: 60%;
     transform: rotate(90deg);
     transform-origin: top left;
 }
-
 .triangle button{
     cursor: pointer;
     position: absolute;
@@ -64,50 +56,46 @@ body{
     font-size: 26px;
     color: #fff;
 }
-
 .triangle button#open{
     left: 60%;
 }
-
-.content{
+.content_day3{
     max-width: 1000px;
     margin: 50px auto;
 }
-
-.content h1{
+.content_day3 h1{
     margin: 0;
     font-size: 35px;
     font-weight: 550;
 }
-
-.content small{
+.content_day3 small{
     color: #555;
     font-style: italic;
 }
 
-.content p{
+.content_day3 p{
     color: #333;
     line-height: 1.5;
     margin-top: 1rem;
 }
 
-.content img{
+.content_day3 img{
     width: 100%;
 }
 
-nav{
+.navbar_day3{
     position: fixed;
     bottom: 40px;
     left: 0;
     z-index: 100;
 }
 
-nav ul {
+.navbar_day3 ul {
     list-style-type: none;
     padding-left: 30px;
 }
 
-nav ul li {
+.navbar_day3 ul li {
     text-transform: uppercase;
     color: #fff;
     margin: 40px 0;
@@ -115,24 +103,20 @@ nav ul li {
     transition: 0.4s ease-in;
 }
 
-nav ul li i{
+.navbar_day3 ul li i{
     font-size: 20px;
     margin-right: 10px;
 }
 
-nav ul li + li {
+.navbar_day3 ul li + li {
     margin-left: 15px;
     transform: translateX(-150%);
 }
 
-nav ul li + li + li {
+.navbar_day3 ul li + li + li {
     margin-left: 30px;
     transform: translateX(-200%);
 }
-
-
-
-
 
 .fa, .fas{
     font-weight: 900;
@@ -140,7 +124,6 @@ nav ul li + li + li {
 .fa, .far, .fas{
     font-family: "Font Awesome 5 Free";
 }
-
 .fa, .fab, .fad, .fal, .far, .fas{
     display: inline-block;
     font-style: normal;
@@ -148,11 +131,9 @@ nav ul li + li + li {
     text-rendering: auto;
     line-height: 1;
 }
-
 .fa-times::before{
     content: "\f00d";
 }
-
 .fa-home::before{
     content: "\f015";
-} */
+}
