--- a/src/Components/Day5/Style.css
+++ b/src/Components/Day5/Style.css
@@ -1,44 +1,13 @@
-/* .main_day5{
-    background-image: url("./jonny-gios-emKSx5APdO4-unsplash.jpg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-} */
 
-/* .main_day5{
-    background: url(https://images.unsplash.com/photo-1576161787924-01bb08dad4a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2104&q=80) no-repeat center center/cover;
-    position: absolute;
-    top: -30px;
-    left: -30px;
-    width: calc(100vw + 60px);
-    height: calc(100vh + 60px);
-    z-index: -1;
-    filter: blur(0px);
-}
-
-.text {
-    font-size: 50px;
-    color: #fff;
-} */
-
-
-/* .main_day5 h1{
-    color: white;
-    opacity: 0.98;
-} */
-
-
-/* 
   * {
     box-sizing: border-box;
   }
 
-  body {
+  body{
+    overflow: hidden;
+  }
+
+  .super_main_day5 {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -62,4 +31,4 @@
   .text {
     font-size: 50px;
     color: #fff;
-  } */
+  }
