--- a/src/Components/Day6/Day6_2nd.css
+++ b/src/Components/Day6/Day6_2nd.css
@@ -1,4 +1,4 @@
-/* body{
+.super_main_day61{
     background-color: #efedd6;
     display: flex;
     flex-direction: column;
@@ -6,6 +6,7 @@
     justify-content: center;
     margin: 0;
     overflow-x: hidden;
+    overflow-y: visible;
 }
 
 .content{
@@ -24,4 +25,4 @@
 .content h3{
     font-size: 40px;
     font-weight: bold;
-} */
+}
