--- a/src/Components/Day9/Style.css
+++ b/src/Components/Day9/Style.css
@@ -1,4 +1,4 @@
-/* .main_day9{
+.main_day9{
     background-color: rgb(161, 100, 223);
     display: flex;
     align-items: center;
@@ -19,4 +19,4 @@
     padding: 1.5rem 3rem;
     font-family: inherit;
     cursor: pointer;
-} */
+}
